<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Transferencia">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="Transferencia Wposs"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/trasNumeroCedula"
        android:layout_width="365dp"
        android:layout_height="59dp"
        android:layout_marginTop="32dp"
        android:autofillHints="@string/nombre"
        android:ems="10"
        android:hint="Numero de cedula del cliente que transfiere"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/transPin"
        android:layout_width="363dp"
        android:layout_height="62dp"
        android:layout_marginTop="32dp"
        android:autofillHints="nombre"
        android:ems="10"
        android:hint="Pin de la Cuenta"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trasNumeroCedula" />

    <EditText
        android:id="@+id/transPinConfi"
        android:layout_width="361dp"
        android:layout_height="69dp"
        android:layout_marginTop="32dp"
        android:autofillHints="@string/email"
        android:ems="10"
        android:hint=" Confirmar Pin de la Cuenta"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transPin" />

    <EditText
        android:id="@+id/transCedulaCliente"
        android:layout_width="365dp"
        android:layout_height="62dp"
        android:layout_marginTop="32dp"
        android:autofillHints="@string/password"
        android:ems="10"
        android:hint="Cedula del Tranferido"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transPinConfi" />

    <EditText
        android:id="@+id/transMonto"
        android:layout_width="365dp"
        android:layout_height="62dp"
        android:layout_marginTop="32dp"
        android:autofillHints="@string/password"
        android:ems="10"
        android:hint="Monto a Transfeir"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transCedulaCliente" />


    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="#03A9F4"
        android:onClick="HacerTransferencia"
        android:text="Transferir"
        app:backgroundTint="#03A9F4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.792"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transMonto" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="#03A9F4"
        android:onClick="Regresar"
        android:text="Regresar"
        app:backgroundTint="#FF5722"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transMonto" />


</androidx.constraintlayout.widget.ConstraintLayout>